RESOLVED FIXED114305
If we fail to decode a message name, pass the message length as the name
https://bugs.webkit.org/show_bug.cgi?id=114305
Summary If we fail to decode a message name, pass the message length as the name
Anders Carlsson
Reported 2013-04-09 13:24:43 PDT
If we fail to decode a message name, pass the message length as the name
Attachments
Patch (2.91 KB, patch)
2013-04-09 13:25 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2013-04-09 13:25:49 PDT
Anders Carlsson
Comment 2 2013-04-09 13:34:00 PDT
Note You need to log in before you can comment on or make changes to this bug.