If we fail to decode a message name, pass the message length as the name https://bugs.webkit.org/show_bug.cgi?id=114305 <rdar://problem/13605703>

Reviewed by Sam Weinig.

* Platform/CoreIPC/ArgumentDecoder.h:
(CoreIPC::ArgumentDecoder::length):
* Platform/CoreIPC/Connection.cpp:
(CoreIPC::Connection::processIncomingMessage):

Canonical link: https://commits.webkit.org/132665@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148043 268f45cc-cd09-0410-ab3c-d52691b4dbfc